<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructureapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/loupe" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/search" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/arrow_icon" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/republic_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_min_margin"
                android:background="@drawable/customborder"
                android:orientation="horizontal"
                android:padding="@dimen/internal_padding">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingRight="@dimen/picture_padding"
                    android:src="@drawable/therepublic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        style="@style/Titles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_margin"
                        android:text="@string/thieves" />

                    <TextView
                        style="@style/AuthorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_margin"
                        android:text="@string/lynch" />

                    <TextView
                        style="@style/Narrator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/narrator_lynch" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/redseas_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_min_margin"
                android:background="@drawable/customborder"
                android:orientation="horizontal"
                android:padding="@dimen/internal_padding">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingRight="@dimen/picture_padding"
                    android:src="@drawable/redseas" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        style="@style/Titles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_margin"
                        android:text="@string/redskies" />

                    <TextView
                        style="@style/AuthorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_margin"
                        android:text="@string/lynch" />

                    <TextView
                        style="@style/Narrator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/narrator_lynch" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lean_startup_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_min_margin"
                android:background="@drawable/customborder"
                android:orientation="horizontal"
                android:padding="@dimen/internal_padding">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingRight="@dimen/picture_padding"
                    android:src="@drawable/leanstartup" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        style="@style/Titles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_margin"
                        android:text="@string/lean" />

                    <TextView
                        style="@style/AuthorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_margin"
                        android:text="@string/ries" />

                    <TextView
                        style="@style/Narrator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/narrator_ries" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/store_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/store" />
</LinearLayout>
