<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructureapp.RepublicOfThieves">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_min_margin"
        android:background="@drawable/customborder"
        android:orientation="horizontal"
        android:padding="@dimen/internal_padding">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:paddingRight="@dimen/picture_padding"
            android:src="@drawable/leanstartup" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">


            <TextView
                style="@style/AuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin"
                android:text="@string/ries" />

            <TextView
                style="@style/Narrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/narrator_ries" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/title_margin"
            android:background="@drawable/play_button" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/AuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_margin"
            android:text="@string/lean_startup_blurb" />

    </ScrollView>

</LinearLayout>