<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructureapp.RepublicOfThieves">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/internal_padding"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_min_margin"
        android:background="@drawable/customborder">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:paddingRight="@dimen/picture_padding"
            android:src="@drawable/redseas" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/AuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/picture_padding"
                android:text="@string/lynch" />

            <TextView
                style="@style/Narrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/narrator_lynch" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/title_margin"
            android:background="@drawable/play_button"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/AuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_margin"
            android:text="@string/red_seas_blurb" />

    </ScrollView>

</LinearLayout>